# clip-cutter

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  api.py  docker-compose.yaml  index.html  main.py  model.onnx  process_all.sh  run_clip_cutter.py  twitch-dl
.github/workflows/: docker-images-develop.yaml  docker-images.yaml
src/: main.rs  offset.rs  twitch.rs  valorant.rs  video.rs
src/events/: ace_event.rs  clutch_event.rs  defuse_event.rs  doublekill_event.rs  event.rs  kill_event.rs  mod.rs  multikill_event.rs  plant_event.rs  retake_event.rs
