[package]
name = "clip-cutter"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Raimann <raimannma@outlook.de>"]
description = "A tool to cut clips from a stream"

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
strip = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
kdam = "0.5.1"
reqwest = "0.11.27"
time = { version = "0.3.34", features = ["parsing", "formatting"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4"] }
valorant_api_official = "0.0.8"
image = "0.25.0"
serde_json = "1.0.115"
serde = "1.0.197"
ffmpeg-sidecar = "1.0.1"
itertools = "0.12.1"
ndarray = "0.15"
log = "0.4.21"
rand = "0.8.5"
lazy_static = "1.4.0"
cached = { version = "0.49.2", features = ["tokio", "async"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
tpe = { git = "https://github.com/raimannma/tpe", version = "0.2.0" }
ort = "1.16.3"
filetime_creation = "0.2.0"
tuple-conv = "1.0.1"
