[package]
name = "clip-cutter"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Raimann <raimannma@outlook.de>"]
description = "A tool to cut clips from a stream"

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
strip = true

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
futures = "0.3.30"
kdam = "0.5.2"
reqwest = "0.12.4"
time = { version = "0.3.36", features = ["parsing", "formatting"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4"] }
valorant_api_official = "0.0.10"
image = "0.25.1"
serde_json = "1.0.117"
serde = "1.0.203"
ffmpeg-sidecar = "1.1.0"
itertools = "0.13.0"
ndarray = "0.15"
log = "0.4.21"
rand = "0.8.5"
lazy_static = "1.4.0"
cached = { version = "0.51.3", features = ["tokio", "async"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
tpe = { git = "https://github.com/raimannma/tpe", version = "0.2.0" }
ort = "1.16.3"
filetime_creation = "0.2.0"
tuple-conv = "1.0.1"
